General styling changes

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ p {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
-btn btn-primary {
+btn btn primary {
     color: #4aaaa5;
 }
 
